# neural_nobble

./: .gitignore  Cargo.toml  README.md  build.rs  check_everything  clean_bash  launch.json  notes.md  tune_network.py
cuda/: .clang-format  CMakeLists.txt  build_everything  clean_fish  clean_sourceme  compile  configure_build  dc  debug_commands  everything  notes.md  sourceme_bash  sourceme_fish  test
cuda/app/: CMakeLists.txt  main.cpp
cuda/cuda_lin_alg/: CMakeLists.txt
cuda/cuda_lin_alg/src/: cuda_utils.cu  cuda_utils.h  gpu_matrix.cu  gpu_matrix.h
cuda/cuda_tests/: CMakeLists.txt  cpu_vs_cputiled_vs_gputiled.cu  cputiled_vs_gputiled.cu  reduce.cu  test_config.hpp
cuda/lin_alg/: CMakeLists.txt
cuda/lin_alg/src/: matrix.cpp  matrix.hpp
cuda/lin_alg_tests/: CMakeLists.txt  cpunaive_vs_cputiled.cpp  main.cpp  test_config.hpp
cuda/tests/: CMakeLists.txt  cpu_vs_cputiled_vs_gputiled.cu  main.cpp  test_config.cpp  test_config.hpp
cuda/utils/: CMakeLists.txt  float_utils.h  utils.h
examples/: autodiff.rs  mnist.rs  neural_network.rs
src/: activation_functions.rs  array_utils.rs  back_propagation.rs  buffer_calculation.rs  common.rs  cost_functions.rs  derivative.rs  device_arena_allocator.rs  device_block_allocation.rs  distribution.rs  feed_forward.rs  ffi.rs  gradient_descent.rs  lib.rs  lin_alg.rs  logging.rs  main.rs  mini_batch.rs  neural_network.rs  one_hot.rs  train.rs
src/lin_alg/: device.rs  host.rs
src/neural_network/: builder.rs  feed_forward.rs  mini_batch.rs
tune_network/: tune_network  tune_network.py
